# scan-input

./: .gitignore  build_windows.bat  installer.iss  main.py  pyproject.toml  pyproject_windows.toml  requirements_windows.txt  scan_input.spec
.github/workflows/: build-windows.yml
src/gui/: batch_extract_tab.py  batch_worker.py  excel_export_tab.py  main_window.py  template_editor.py  worker.py
src/io/: excel_io.py  file_utils.py  pdf_converter.py  pdf_reader.py  word_export.py
src/ocr/: engine.py  preprocessor.py  vi_normalizer.py
src/template/: extractor.py  formula_extractor.py  template_model.py
templates/: a.json  ĐẢNG BỘ CÁC CƠ QUAN ĐẢNG.json
